--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "donatj/flags",
     "description": "Commandline Flag Parser",
     "require-dev": {
-        "donatj/drop": "*"
+        "donatj/drop": "*",
+		"phpunit/phpunit" : "3.7.*"
     },
     "license": "MIT",
     "authors": [
@@ -12,7 +13,7 @@
         }
     ],
     "require": {
-
+		"php": ">=5.3.0"
     },
 	"autoload": {
 		"psr-0": {
