Fixing a travis ci problem

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 	"authors": [
 		{
 			"name": "Jesse Donat",
-			"email": "donatj@gmail.com"
+			"email": "donatj@gmail.com",
 			"homepage": "http://donatstudios.com",
 			"role": "Developer"
 		}
