--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,13 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - nightly
   - hhvm
+
+matrix:
+  allow_failures:
+    - php: nightly
+
 before_script:
 - composer install --no-dev
 script: phpunit
