--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,5 @@ matrix:
   allow_failures:
     - php: nightly
 
-before_script:
-- composer install --no-dev
-script: phpunit
+install: composer install
+script: vendor/bin/phpunit
