--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 		{
 			"name": "Jesse Donat",
 			"email": "donatj@gmail.com",
-			"homepage": "http://donatstudios.com",
+			"homepage": "https://donatstudios.com",
 			"role": "Developer"
 		}
 	],
